tests/rustdoc-ui/invalid-theme-name.rs
//@ compile-flags:--theme {{src-base}}/invalid-theme-name.rs
//@ error-pattern: must have a .css extension

//~? ERROR invalid argument: "$DIR/invalid-theme-name.rs"
